# globe-como

./: .gitignore  .gitmodules  CMakeLists.txt  Globe.pro  README  README.md  build.rb  build_directory.in
.github/workflows/: codeql-analysis.yml
.reuse/: dep5
Globe/: Globe.pro  application_cfg.cpp  application_cfg.hpp  channel_attributes.cpp  channel_attributes.hpp  channel_attributes.ui  channel_timeout_widget.cpp  channel_timeout_widget.hpp  channel_view.cpp  channel_view.hpp  channel_view_window.cpp  channel_view_window.hpp  channel_view_window_cfg.cpp  channel_view_window_cfg.hpp  channel_view_window_model.cpp  channel_view_window_model.hpp  channel_widget.cpp  channel_widget.hpp  channels.cpp  channels.hpp  channels_cfg.cpp  channels_cfg.hpp  channels_list.cpp  channels_list.hpp  channels_to_show.cpp  channels_to_show.hpp  color_for_level.cpp  color_for_level.hpp  color_frame_widget.cpp  color_frame_widget.hpp  color_picker.cpp  condition.cpp  condition.hpp  condition_cfg.cpp  condition_cfg.hpp  condition_widget.cpp  condition_widget.hpp  condition_widget.ui  configuration.cpp  configuration.hpp  (+91 more)
Globe/App/: App.pro  main.cpp  prj.rb
Globe/Core/: Core.pro  application_cfg.cpp  application_cfg.hpp  channel_attributes.cpp  channel_attributes.hpp  channel_attributes.ui  channel_name_dialog.cpp  channel_name_dialog.hpp  channel_timeout_widget.cpp  channel_timeout_widget.hpp  channel_view.cpp  channel_view.hpp  channel_view_window.cpp  channel_view_window.hpp  channel_view_window_cfg.cpp  channel_view_window_cfg.hpp  channel_view_window_model.cpp  channel_view_window_model.hpp  channel_widget.cpp  channel_widget.hpp  channels.cpp  channels.hpp  channels_cfg.cpp  channels_cfg.hpp  channels_list.cpp  channels_list.hpp  channels_to_show.cpp  channels_to_show.hpp  color_for_level.cpp  color_for_level.hpp  color_for_level_cfg.cpp  color_for_level_cfg.hpp  color_picker.cpp  color_picker.hpp  condition.cpp  condition.hpp  condition_cfg.cpp  condition_cfg.hpp  configuration.cpp  configuration.hpp  (+120 more)
Globe/LogViewer/: LogViewer.pro  configuration.cpp  configuration.hpp  log.cpp  log.hpp  log_viewer.rc  main.cpp  mainwindow.cpp  mainwindow.hpp
Globe/Scheme/: Scheme.pri  Scheme.pro  aggregate.cpp  aggregate.hpp  base_item.cpp  base_item.hpp  enums.hpp  item_base_cfg.cpp  item_base_cfg.hpp  mm_pixels.cpp  mm_pixels.hpp  name_dlg.cpp  name_dlg.hpp  name_dlg.ui  scene.cpp  scene.hpp  scheme_cfg.cpp  scheme_cfg.hpp  scheme_resources.qrc  scheme_utils.cpp  scheme_utils.hpp  selectable.cpp  selectable.hpp  selection.cpp  selection.hpp  size_dialog.cpp  size_dialog.hpp  size_dialog.ui  source.cpp  source.hpp  source_cfg.cpp  source_cfg.hpp  text.cpp  text.hpp  text_cfg.cpp  text_cfg.hpp  text_dialog.cpp  text_dialog.hpp  view.cpp  view.hpp  (+4 more)
Globe/plugins/: plugins.pro
Globe/scheme/: scene.hpp  source.cpp
example/: start-example-server.cmd  start-example-server.sh  start-globe.cmd  start-globe.sh
example/Globe/: Channels.cfg  Colors.cfg  DB.cfg  DisabledSounds.cfg  Globe.cfg  Log.cfg  LogEventWindow.cfg  MainWindow.cfg  Properties.cfg  Sounds.cfg  SourcesLogWindow.cfg  SourcesMainWindow.cfg  Windows.cfg
modeltest/: modeltest.cpp  modeltest.h
src/: CMakeLists.txt
src/App/: App.pro  CMakeLists.txt  globe.rc  main.cpp
src/Core/: CMakeLists.txt  Core.pro  application_cfg.cpp  application_cfg.hpp  channel_attributes.cpp  channel_attributes.hpp  channel_attributes.ui  channel_name_dialog.cpp  channel_name_dialog.hpp  channel_timeout_widget.cpp  channel_timeout_widget.hpp  channel_view.cpp  channel_view.hpp  channel_view_window.cpp  channel_view_window.hpp  channel_view_window_cfg.cpp  channel_view_window_cfg.hpp  channel_view_window_model.cpp  channel_view_window_model.hpp  channel_widget.cpp  channel_widget.hpp  channels.cpp  channels.hpp  channels_cfg.cpp  channels_cfg.hpp  channels_list.cpp  channels_list.hpp  channels_to_show.cpp  channels_to_show.hpp  channels_to_show.ui  color_for_level.cpp  color_for_level.hpp  color_for_level_cfg.cpp  color_for_level_cfg.hpp  color_picker.cpp  color_picker.hpp  condition.cpp  condition.hpp  condition_cfg.cpp  condition_cfg.hpp  (+124 more)
src/LogViewer/: CMakeLists.txt  LogViewer.pro  configuration.cpp  configuration.hpp  log.cpp  log.hpp  log_viewer_resources.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp
src/Scheme/: aggregate.cpp  aggregate.hpp  base_item.cpp  base_item.hpp  enums.hpp  item_base_cfg.cpp  item_base_cfg.hpp  mm_pixels.cpp  mm_pixels.hpp  name_dlg.cpp  name_dlg.hpp  name_dlg.ui  scene.cpp  scene.hpp  scheme_cfg.cpp  scheme_cfg.hpp  scheme_resources.qrc  scheme_utils.cpp  scheme_utils.hpp  selectable.cpp  selectable.hpp  selection.cpp  selection.hpp  size_dialog.cpp  size_dialog.hpp  source.cpp  source.hpp  source_cfg.cpp  source_cfg.hpp  text.cpp  text.hpp  text_cfg.cpp  text_cfg.hpp  text_dialog.cpp  text_dialog.hpp  text_dialog.ui  view.cpp  view.hpp  window.cpp  window.hpp  (+2 more)
src/plugins/: CMakeLists.txt
src/plugins/channels/como_channel/: CMakeLists.txt  como_channel.pro  plugin.cpp
tr/: globe_ru.qm  globe_ru.ts  logviewer_ru.qm  logviewer_ru.ts
trunk/: Globe.pro  como_defines.pri
trunk/Globe/: Globe.pro  application_cfg.cpp  application_cfg.hpp  channel_attributes.cpp  channel_attributes.hpp  channel_attributes.ui  channel_name_dialog.cpp  channel_name_dialog.hpp  channel_timeout_widget.cpp  channel_timeout_widget.hpp  channel_view.cpp  channel_view.hpp  channel_view_window.cpp  channel_view_window.hpp  channel_view_window_cfg.cpp  channel_view_window_cfg.hpp  channel_view_window_model.cpp  channel_view_window_model.hpp  channel_widget.cpp  channel_widget.hpp  channels.cpp  channels.hpp  channels_cfg.hpp  channels_list.cpp  channels_list.hpp  channels_to_show.cpp  channels_to_show.hpp  color_for_level.cpp  color_for_level.hpp  color_for_level_cfg.cpp  condition.cpp  condition.hpp  condition_cfg.cpp  condition_cfg.hpp  condition_widget.cpp  configuration.cpp  configuration.hpp  configuration_dialog.cpp  configuration_dialog.hpp  db.cpp  (+85 more)
trunk/modeltest/: modeltest.cpp
trunk/tr/: globe_ru.qm  globe_ru.ts
(+144 files in other folders)
